# acidwarp

./: .gitignore  AboutMenu.h  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_LINUX_V_1_0  README_SDL.md  acidwarp.6  acidwarp.c  acidwarp.h  bit_map.c  bit_map.h  build-sdl3-image-xcode.sh  build-sdl3-xcode.sh  display.c  display.h  download-sdl3-framework.sh  download-sdl3-image-framework.sh  draw.c  extract-test-screenshots.sh  gen_img.c  handy.h  img_float.c  palinit.c  rename_screenshots.py  warp_text.c
.github/workflows/: build-all-platforms.yml
SDL3.xcframework/: Info.plist
SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
SDL3.xcframework/ios-arm64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
SDL3.xcframework/ios-arm64_x86_64-simulator/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
SDL3.xcframework/ios-arm64_x86_64-simulator/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/x86_64/: SDL3.yml
SDL3.xcframework/tvos-arm64/SDL3.framework/: Info.plist  SDL3
SDL3.xcframework/tvos-arm64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
SDL3.xcframework/tvos-arm64_x86_64-simulator/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
SDL3.xcframework/tvos-arm64_x86_64-simulator/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/x86_64/: SDL3.yml
android/: .gitignore  README.md  build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/androidTest/java/com/dermochelys/acidwarp/: ActivityUITest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dermochelys/acidwarp/: Activity.kt
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
android/gradle/: libs.versions.toml
android/prerelease-libs/: SDL3_image-3.2.5.aar
android/release/: output-metadata.json
android/release/5.0.0/: output-metadata.json
ios/: .gitignore  README.md  acidwarp.xctestplan  build-uitests.sh  run-uitests.sh  start-simulator-background.sh  start-simulator.sh  test-uitests.sh  wait-for-simulator.sh
ios/acidwarp/: AboutMenu.m
ios/acidwarp-ios.xcodeproj/: project.pbxproj
ios/acidwarp-ios.xcodeproj/xcshareddata/xcschemes/: acidwarp.xcscheme
ios/acidwarp/Base.lproj/: LaunchScreen.storyboard
ios/acidwarp/Settings.bundle/: Root.plist
ios/acidwarpTests/: acidwarpTests.m
ios/acidwarpUITests/: acidwarpUITests.m  acidwarpUITestsLaunchTests.m
linux/: .gitignore  CMakeLists.txt  README.md  ui_test.sh
linux/snap/: snap_pack.sh  snapcraft.yaml
macos/: .gitignore  README.md  run-uitests.sh  ui_test.sh
macos/acidwarp/: AboutMenu.m  AboutWindowController.h  AboutWindowController.m
macos/acidwarp-macos.xcodeproj/: project.pbxproj
macos/acidwarp/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/acidwarp/Assets.xcassets/about.imageset/: Contents.json
macos/acidwarp/Credits.rtfd/: TXT.rtf
macos/acidwarpTests/: Acid_WarpTests.m
macos/acidwarpUITests/: Acid_WarpUITests.m  Acid_WarpUITestsLaunchTests.m
previous_ports/acidwarp-amiga/: README.amiga  acidwarp  acidwarp-68000
previous_ports/acidwarp-amiga/src/: acidwarp.c  acidwarp.h  amiga.c  amiga.h  handy.h  vga.h  vgagl.h  warp_text.c
previous_ports/acidwarp-dos/: README_DOS_V_4_1.txt
previous_ports/acidwarp-linux/: README_LINUX_V_1_0.txt
previous_ports/acidwarp-sdl/: README_SDL.md
shared/: CMakeLists.txt  acidwarp.6  acidwarp.c  acidwarp.h  bit_map.h  display.c  draw.c  gen_img.c  handy.h  img_float.c  img_float.h  remote_overlay.c  remote_overlay.h
windows/: .gitignore  CMakeLists.txt  README.md  acidwarp.rc  metadata.json  signexe.bat  ui_test.ps1  ui_test.sh
windows/release/1.3.0.0/: DermochelysSoftwareLLC.AcidWarp_1.3.0.0_x64.msix
windows/release/5.0.0.0/: DermochelysSoftwareLLC.AcidWarp_5.0.0.0_x64.msix
